# usb_monitor

./: CMakeLists.txt  Makefile  README.md
python/: usb_monitor_server.py
src/: main.cpp  udev.cpp  udev.hpp  usb_monitor.cpp  usb_monitor.hpp  utils.cpp  utils.h  utils.hpp
